Rename all parameters according to more standardized conventions.

--- a/1_basic_simulations.ipynb
+++ b/1_basic_simulations.ipynb
@@ -50,16 +50,16 @@
     "SYNS = ['AMPA']\n",
     "\n",
     "NTWK_KWARGS = {\n",
-    "    't_m': P.T_M,  # (s)\n",
-    "    'e_leak': P.E_LEAK,  # (V)\n",
-    "    'v_th': P.V_TH,  # (V)\n",
-    "    'v_reset': P.V_RESET,  # (V)\n",
+    "    't_m': P.T_M_PC,  # (s)\n",
+    "    'e_leak': P.E_L_PC,  # (V)\n",
+    "    'v_th': P.V_TH_PC,  # (V)\n",
+    "    'v_reset': P.V_RESET_PC,  # (V)\n",
     "    't_r': P.T_R,  # (s)\n",
-    "    'es_rev': {'AMPA': P.E_AMPA},  # (V)\n",
-    "    'ts_syn': {'AMPA': P.T_AMPA},  # (s)\n",
+    "    'es_rev': {'AMPA': P.E_A},  # (V)\n",
+    "    'ts_syn': {'AMPA': P.T_A},  # (s)\n",
     "    'ws_rcr': {'AMPA': np.zeros((N, N))},  # (unitless)\n",
     "    'ws_up': {\n",
-    "        'AMPA': P.W_A_PL_CA3 * np.eye(N),\n",
+    "        'AMPA': P.W_A_PC_PL * np.eye(N),\n",
     "    },\n",
     "}"
    ]
@@ -173,11 +173,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ntwk = LIFNtwk(**NTWK_KWARGS)\n",
-    "vs_init = P.E_LEAK * np.ones(N)\n",
+    "vs_init = P.E_L_PC * np.ones(N)\n",
     "gs_init = {syn: np.zeros(N) for syn in SYNS}\n",
     "ntwk_response = ntwk.run(spks_up, vs_init, gs_init, P.DT)\n",
     "ntwk_response.place_field_centers = centers\n",
