--- a/2_basic_plasticity.ipynb
+++ b/2_basic_plasticity.ipynb
@@ -55,21 +55,21 @@
     "# make network with two cells, one receiving control ECII input and one receiving potentiated ECII input\n",
     "N = 2\n",
     "WS_RCR = {'NMDA': np.zeros((2, 2))}\n",
-    "WS_UP = {'NMDA': np.diag([P.W_N_EC_CA3_I, P.W_N_EC_CA3_F])}\n",
+    "WS_UP = {'NMDA': np.diag([P.W_N_PC_EC_I, P.W_N_PC_EC_F])}\n",
     "\n",
     "ntwk = LIFNtwk(\n",
-    "    t_m=P.T_M,\n",
-    "    e_leak=P.E_LEAK,\n",
-    "    v_th=P.V_TH,\n",
-    "    v_reset=P.V_RESET,\n",
+    "    t_m=P.T_M_PC,\n",
+    "    e_leak=P.E_L_PC,\n",
+    "    v_th=P.V_TH_PC,\n",
+    "    v_reset=P.V_RESET_PC,\n",
     "    t_r=P.T_R,\n",
-    "    es_rev={'NMDA': P.E_NMDA},\n",
-    "    ts_syn={'NMDA': P.T_NMDA},\n",
+    "    es_rev={'NMDA': P.E_N},\n",
+    "    ts_syn={'NMDA': P.T_N},\n",
     "    ws_rcr=WS_RCR,\n",
     "    ws_up=WS_UP,\n",
     ")\n",
     "\n",
-    "vs_init = np.array([P.E_LEAK, P.E_LEAK])\n",
+    "vs_init = np.array([P.E_L_PC, P.E_L_PC])\n",
     "gs_init = {'NMDA': np.array([0., 0])}\n",
     "resp = ntwk.run(spks_up, vs_init, gs_init, P.DT)\n",
     "\n",
@@ -157,21 +157,21 @@
     "\n",
     "# upstream AMPA place-tuned cxns\n",
     "W_UP_AMPA = np.concatenate(\n",
-    "    [P.W_A_PL_CA3 * np.eye(N), np.zeros((N, N))], axis=1)\n",
+    "    [P.W_A_PC_PL * np.eye(N), np.zeros((N, N))], axis=1)\n",
     "# upstream NMDA cxns from ECII \n",
     "W_UP_NMDA = np.concatenate(\n",
-    "    [np.zeros((N, N)), P.W_N_EC_CA3_I * np.eye(N)], axis=1)\n",
+    "    [np.zeros((N, N)), P.W_N_PC_EC_I * np.eye(N)], axis=1)\n",
     "\n",
     "WS_UP = {'AMPA': W_UP_AMPA, 'NMDA': W_UP_NMDA}\n",
     "\n",
     "NTWK_KWARGS = {\n",
-    "    't_m': P.T_M,  # (s)\n",
-    "    'e_leak': P.E_LEAK,  # (V)\n",
-    "    'v_th': P.V_TH,  # (V)\n",
-    "    'v_reset': P.V_RESET,  # (V)\n",
+    "    't_m': P.T_M_PC,  # (s)\n",
+    "    'e_leak': P.E_L_PC,  # (V)\n",
+    "    'v_th': P.V_TH_PC,  # (V)\n",
+    "    'v_reset': P.V_RESET_PC,  # (V)\n",
     "    't_r': P.T_R,  # (s)\n",
-    "    'es_rev': {'AMPA': P.E_AMPA, 'NMDA': P.E_NMDA},  # (V)\n",
-    "    'ts_syn': {'AMPA': P.T_AMPA, 'NMDA': P.T_NMDA},  # (s)\n",
+    "    'es_rev': {'AMPA': P.E_A, 'NMDA': P.E_N},  # (V)\n",
+    "    'ts_syn': {'AMPA': P.T_A, 'NMDA': P.T_N},  # (s)\n",
     "    'ws_rcr': {'AMPA': np.zeros((N, N)), 'NMDA': np.zeros((N, N))},  # (unitless)\n",
     "    'ws_up': WS_UP,\n",
     "}\n",
@@ -187,8 +187,8 @@
     "\n",
     "PLASTICITY = {\n",
     "    'masks': MASKS_PLASTIC,\n",
-    "    'w_ec_ca3_maxs': {'AMPA': np.nan, 'NMDA': P.W_N_EC_CA3_F},\n",
-    "    'T_W': P.T_W, 'T_C': P.T_C, 'C_S': P.C_S, 'BETA_C': P.BETA_C,\n",
+    "    'w_ec_ca3_maxs': {'AMPA': np.nan, 'NMDA': P.W_N_PC_EC_F},\n",
+    "    'T_W': P.T_W, 'T_C': P.T_C, 'C_S': P.C_S, 'BETA_C': P.B_C,\n",
     "}\n",
     "\n",
     "# EC INPUT PARAMS\n",
@@ -377,7 +377,7 @@
    "source": [
     "# make ntwk and run simulation\n",
     "ntwk = LIFNtwk(**NTWK_KWARGS, plasticity=PLASTICITY)\n",
-    "vs_init = P.E_LEAK * np.ones(N)\n",
+    "vs_init = P.E_L_PC * np.ones(N)\n",
     "gs_init = {syn: np.zeros(N) for syn in SYNS}\n",
     "resp = ntwk.run(spks_up, vs_init, gs_init, P.DT)\n",
     "resp.place_field_centers = centers\n",
@@ -518,7 +518,7 @@
     "    ax_ws.plot(ts, ws_plastic)\n",
     "    \n",
     "    ax_ws.set_xlim(ts[0], ts[-1])\n",
-    "    ax_ws.set_ylim(0.9*P.W_N_EC_CA3_I, 1.1*P.W_N_EC_CA3_F)\n",
+    "    ax_ws.set_ylim(0.9*P.W_N_PC_EC_I, 1.1*P.W_N_PC_EC_F)\n",
     "    ax_ws.set_xlabel('t (s)')\n",
     "    ax_ws.set_ylabel('W')\n",
     "    \n",
