--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "The $i$-th neuron's membrane voltage $V_i(t)$ is given by:\n",
     "\n",
-    "$\\tau_m\\cfrac{dV_i}{dt} = -(V_i - E_L) - g^i_{AMPA}(t)(V_i - E_{AMPA}) - g^i_{NMDA}(t)(V_i - E_{NMDA}) - g^i_{GABA}(t)(V_i - E_{GABA}) + I_{ext}(t)$\n",
+    "$\\tau_m\\cfrac{dV_i}{dt} = -(V_i - E_L) - g^i_A(t)(V_i - E_A) - g^i_{N}(t)(V_i - E_N) - g^i_G(t)(V_i - E_G) + I_{ext}(t)$\n",
     "\n",
-    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_{AMPA}$ and $E_{AMPA}$ the AMPA conductance and reversal potential, respectively, etc., with conductances defined relative to the leak conductance. $I_{ext}$ is any external current injected directly into the neuron."
+    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_A$ and $E_A$ the AMPA conductance and reversal potential, respectively, etc., with conductances defined relative to the leak conductance. $I_{ext}$ is any external current injected directly into the neuron."
    ]
   },
   {
@@ -25,7 +25,7 @@
     "\n",
     "$g^i_{SYN} = \\sum\\limits_j w_{ij} \\sum\\limits_{k(j)} h_{SYN}(t - t^{k(j)})$\n",
     "\n",
-    "where $g^i_{SYN} \\in \\{g^i_{AMPA}, g^i_{NMDA}, g^i_{GABA}\\}$, $j$ indexes upstream neurons, $w_{ij}$ is the synaptic strength from neuron $j$ onto neuron $i$, $k(j)$ is the $k$-th spike time of upstream neuron $j$, and $h_{SYN}(t)$ is the synaptic activation function for synapse type $SYN$ (in this case a one-sided exponential). These conductances are relative to the leak conductance and have no units.\n",
+    "where $g^i_{SYN} \\in \\{g^i_A, g^i_N, g^i_G\\}$, $j$ indexes upstream neurons, $w_{ij}$ is the synaptic strength from neuron $j$ onto neuron $i$, $k(j)$ is the $k$-th spike time of upstream neuron $j$, and $h_{SYN}(t)$ is the synaptic activation function for synapse type $SYN$ (in this case a one-sided exponential). These conductances are relative to the leak conductance and have no units.\n",
     "\n",
     "In short, the synaptic conductance of neuron $i$ caused by neuron $j$'s spike train is a convolution of neuron $j$'s spike train (where each spike is a delta function) with synaptic activation function $h(t)$ (e.g., a 1-sided decaying exponential), scaled by the synaptic weight $w_{ij}$."
    ]
@@ -62,9 +62,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EC-CA3 activity-dependent plasticity\n",
+    "# EC->CA3-PC activity-dependent plasticity\n",
     "\n",
-    "Hyun (2013, 2015) showed that a 10 Hz spike train in a CA3 cell lasting 1-2 s, elicited either by direct current injection or activation of upstream mossy fibers, was sufficient to almost double the size of ECII-CA3 EPSPs.\n",
+    "Hyun (2013, 2015) showed that a 10 Hz spike train in a CA3 PC lasting 1-2 s, elicited either by direct current injection or activation of upstream mossy fibers, was sufficient to almost double the size of EC->CA3 EPSPs.\n",
     "\n",
     "We model this activity-dependent synaptic weight change in the $i$-th neuron by introducing an auxiliary synaptic variable $c_i$ that effectively counts spikes over a short window of time:\n",
     "\n",
@@ -72,7 +72,7 @@
     "\n",
     "where $t^{k(i)}$ is the $i$-th neuron's $k$-th spike time, and $\\alpha$ is a one-sided exponential with timescale $\\tau_c$.\n",
     "\n",
-    "The $c_i$-dependent change in $w_{A,i}^{EC-CA3}$, which we abbreviate to $w_i$ here, is given by:\n",
+    "The $c_i$-dependent change in $w_{A,i}^{PC,EC}$, which we abbreviate to $w_i$ here, is given by:\n",
     "\n",
     "$\\tau_w\\cfrac{dw_i}{dt} = z(c_i)(w_{max} - w_i)$\n",
     "\n",
