Determine CA3 PC-PC recurrent cxn strength.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -71,7 +71,7 @@
     "|$p_N^{PC,PC}$|`P_N_PC_PC`|NMDA cxn prob for CA3-CA3 recurrent cxns|1|%||\n",
     "|$p_A^{PC,EC}$|`P_A_PC_PC`|AMPA cxn prob for EC->CA3 cxns|1|%||\n",
     "|$p_N^{PC,EC}$|`P_N_PC_PC`|NMDA cxn prob for EC->CA3 cxns|1|%||\n",
-    "|$w_A^{PC,PC}$|`W_A_PC_PC`|AMPA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
+    "|$w_A^{PC,PC}$|`W_A_PC_PC`|AMPA cxn weight for CA3-CA3 recurrent cxns|0.0085|-|chosen to yield ~ 2 mV PC-PC EPSPs, as measured in Mishra 2015|\n",
     "|$w_N^{PC,PC}$|`W_N_PC_PC`|NMDA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
     "|$w_A^{PC,EC}$|`W_A_PC_EC`|AMPA cxn weight for EC->CA3 cxns|0|-||\n",
     "|$w_N^{PC,EC,i}$|`W_N_PC_EC_I`|initial AMPA cxn weight for EC->CA3 cxns|0.00065|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
@@ -188,7 +188,7 @@
       "P_A_PC_EC = 0.01\n",
       "P_N_PC_EC = 0.01\n",
       "\n",
-      "W_A_PC_PC = 0\n",
+      "W_A_PC_PC = 0.0085\n",
       "W_N_PC_PC = 0\n",
       "\n",
       "W_A_PC_EC = 0\n",
