Add equations for proximal attachment connectivity rule.

--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -82,6 +82,24 @@
     "\n",
     "In other words, when rapid spiking causes $c_i$ to exceed a threshold $c^*$, $w_i$ increases towards $w_{max}$ with a timescale $\\tau_c$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recurrent CA3 PC-PC connectivity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We model recurrent connectivity among CA3 PCs by assuming that cells with similar place-tuning have a higher probability of connecting. Specifically, the probability of a candidate targ PC receiving a connection from a src PC at a distance $d$ away is given by:\n",
+    "\n",
+    "$P(d) = \\min(1, Z_{PC}\\exp[-d/\\lambda_{PC}])$\n",
+    "\n",
+    "with $\\lambda_{PC} > 0$."
+   ]
   }
  ],
  "metadata": {
