Add more params.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -65,8 +65,9 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$N^{PC}$|`N_PC`|number of neurons in CA3 ntwk|1000|-||\n",
-    "|$N^{EC}$|`N_EC`|number of EC neurons upstream of CA3|1000|-||\n",
+    "|$N^{PC}$|`N_PC`|number of CA3 pyramidal cells (PCs)|900|-||\n",
+    "|$N^{INH}$|`N_INH`|number of CA3 inh. cells (INHs)|100|-||\n",
+    "|$N^{EC}$|`N_EC`|number of EC neurons upstream of CA3 PCs|900|-||\n",
     "|$p_A^{PC,PC}$|`P_A_PC_PC`|AMPA cxn prob for CA3-CA3 recurrent cxns|1|%||\n",
     "|$p_N^{PC,PC}$|`P_N_PC_PC`|NMDA cxn prob for CA3-CA3 recurrent cxns|1|%||\n",
     "|$p_A^{PC,EC}$|`P_A_PC_PC`|AMPA cxn prob for EC->CA3 cxns|1|%||\n",
