Change 'es_rev' to 'es_syn'.

--- a/1_basic_simulations.ipynb
+++ b/1_basic_simulations.ipynb
@@ -55,7 +55,7 @@
     "    'v_th': P.V_TH_PC,  # (V)\n",
     "    'v_reset': P.V_RESET_PC,  # (V)\n",
     "    't_r': P.T_R,  # (s)\n",
-    "    'es_rev': {'AMPA': P.E_A},  # (V)\n",
+    "    'es_syn': {'AMPA': P.E_A},  # (V)\n",
     "    'ts_syn': {'AMPA': P.T_A},  # (s)\n",
     "    'ws_rcr': {'AMPA': np.zeros((N, N))},  # (unitless)\n",
     "    'ws_up': {\n",
