--- a/2_basic_plasticity.ipynb
+++ b/2_basic_plasticity.ipynb
@@ -63,7 +63,7 @@
     "    v_th=P.V_TH_PC,\n",
     "    v_reset=P.V_RESET_PC,\n",
     "    t_r=P.T_R,\n",
-    "    es_rev={'NMDA': P.E_N},\n",
+    "    es_syn={'NMDA': P.E_N},\n",
     "    ts_syn={'NMDA': P.T_N},\n",
     "    ws_rcr=WS_RCR,\n",
     "    ws_up=WS_UP,\n",
@@ -170,7 +170,7 @@
     "    'v_th': P.V_TH_PC,  # (V)\n",
     "    'v_reset': P.V_RESET_PC,  # (V)\n",
     "    't_r': P.T_R,  # (s)\n",
-    "    'es_rev': {'AMPA': P.E_A, 'NMDA': P.E_N},  # (V)\n",
+    "    'es_syn': {'AMPA': P.E_A, 'NMDA': P.E_N},  # (V)\n",
     "    'ts_syn': {'AMPA': P.T_A, 'NMDA': P.T_N},  # (s)\n",
     "    'ws_rcr': {'AMPA': np.zeros((N, N)), 'NMDA': np.zeros((N, N))},  # (unitless)\n",
     "    'ws_up': WS_UP,\n",
