--- a/3_inhibition_and_recurrence.ipynb
+++ b/3_inhibition_and_recurrence.ipynb
@@ -116,12 +116,12 @@
     "    v_th = cc([P.V_TH_PC*np.ones(N_PC), P.V_TH_INH*np.ones(N_INH)])\n",
     "    v_reset = cc([P.V_RESET_PC*np.ones(N_PC), P.V_RESET_PC*np.ones(N_INH)])\n",
     "    \n",
-    "    es_rev = {'AMPA': P.E_A, 'GABA': P.E_G}\n",
+    "    es_syn = {'AMPA': P.E_A, 'GABA': P.E_G}\n",
     "    ts_syn = {'AMPA': P.T_A, 'GABA': P.T_G}\n",
     "    \n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=t_m, e_leak=e_l, v_th=v_th, v_reset=v_reset, t_r=P.T_R,\n",
-    "        es_rev=es_rev, ts_syn=ts_syn, ws_rcr=ws_rcr, ws_up=ws_up)\n",
+    "        es_syn=es_syn, ts_syn=ts_syn, ws_rcr=ws_rcr, ws_up=ws_up)\n",
     "    \n",
     "    # run ntwk\n",
     "    vs_init = e_l.copy()\n",
