--- a/parameters_aux.ipynb
+++ b/parameters_aux.ipynb
@@ -46,7 +46,7 @@
     "\n",
     "WS_AMPA = np.linspace(0, .03, 20)\n",
     "\n",
-    "ES_REV = {'AMPA': P.E_A}\n",
+    "ES_SYN = {'AMPA': P.E_A}\n",
     "TS_SYN = {'AMPA': P.T_A}\n",
     "WS_RCR = {'AMPA': np.array([[0.]])}\n",
     "\n",
@@ -75,7 +75,7 @@
     "    # make ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M_PC, e_leak=P.E_L_PC, v_th=P.V_TH_PC, v_reset=P.V_RESET_PC, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    \n",
     "    # run simulation\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
@@ -130,7 +130,7 @@
     "# make and run ntwk\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M_PC, e_leak=P.E_L_PC, v_th=P.V_TH_PC, v_reset=P.V_RESET_PC, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
     "# make plot\n",
@@ -182,7 +182,7 @@
     "\n",
     "MAX_RATES_UP = np.linspace(0, 600, 20)\n",
     "\n",
-    "ES_REV = {'AMPA': P.E_AMPA}\n",
+    "ES_SYN = {'AMPA': P.E_AMPA}\n",
     "TS_SYN = {'AMPA': P.T_AMPA}\n",
     "WS_RCR = {'AMPA': np.array([[0.]])}\n",
     "WS_UP = {'AMPA': np.array([[P.W_A_PL_CA3]])}\n",
@@ -195,7 +195,7 @@
     "# make ntwk\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M, e_leak=P.E_LEAK, v_th=P.V_TH, v_reset=P.V_RESET, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=WS_UP)\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=WS_UP)\n",
     "\n",
     "# loop over max synaptic input rate values\n",
     "ts = np.arange(0, DUR, P.DT)\n",
@@ -340,7 +340,7 @@
     "WS_NMDA = np.linspace(0, .0025, 20)\n",
     "\n",
     "# single unit parameters\n",
-    "ES_REV = {'NMDA': P.E_NMDA}\n",
+    "ES_SYN = {'NMDA': P.E_NMDA}\n",
     "TS_SYN = {'NMDA': P.T_NMDA}\n",
     "WS_RCR = {'NMDA': np.array([[0.]])}\n",
     "\n",
@@ -369,7 +369,7 @@
     "    # make ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M, e_leak=P.E_LEAK, v_th=P.V_TH, v_reset=P.V_RESET, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    \n",
     "    # run simulation\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
@@ -431,7 +431,7 @@
     "    # make and run ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M, e_leak=P.E_LEAK, v_th=P.V_TH, v_reset=P.V_RESET, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
     "    # make plot\n",
@@ -695,7 +695,7 @@
     "\n",
     "WS_GABA = np.linspace(0, .05, 20)\n",
     "\n",
-    "ES_REV = {'GABA': P.E_GABA}\n",
+    "ES_SYN = {'GABA': P.E_GABA}\n",
     "TS_SYN = {'GABA': P.T_GABA}\n",
     "WS_RCR = {'GABA': np.array([[0.]])}\n",
     "\n",
@@ -724,7 +724,7 @@
     "    # make ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M, e_leak=P.E_LEAK, v_th=P.V_TH, v_reset=P.V_RESET, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    \n",
     "    # run simulation\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
@@ -780,7 +780,7 @@
     "# make and run ntwk\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M, e_leak=P.E_LEAK, v_th=P.V_TH, v_reset=P.V_RESET, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
     "# make plot\n",
@@ -832,7 +832,7 @@
     "\n",
     "WS_AMPA = np.linspace(0, .03, 20)\n",
     "\n",
-    "ES_REV = {'AMPA': P.E_AMPA}\n",
+    "ES_SYN = {'AMPA': P.E_AMPA}\n",
     "TS_SYN = {'AMPA': P.T_AMPA}\n",
     "WS_RCR = {'AMPA': np.array([[0.]])}\n",
     "\n",
@@ -861,7 +861,7 @@
     "    # make ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M_INH, e_leak=P.E_LEAK_INH, v_th=P.V_TH_INH, v_reset=P.V_RESET_INH, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    \n",
     "    # run simulation\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
@@ -916,7 +916,7 @@
     "# make and run ntwk\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M_INH, e_leak=P.E_LEAK_INH, v_th=P.V_TH_INH, v_reset=P.V_RESET_INH, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
     "# make plot\n",
@@ -964,7 +964,7 @@
     "\n",
     "WS_AMPA = np.linspace(0, .015, 20)\n",
     "\n",
-    "ES_REV = {'AMPA': P.E_A}\n",
+    "ES_SYN = {'AMPA': P.E_A}\n",
     "TS_SYN = {'AMPA': P.T_A}\n",
     "WS_RCR = {'AMPA': np.array([[0.]])}\n",
     "\n",
@@ -993,7 +993,7 @@
     "    # make ntwk\n",
     "    ntwk = LIFNtwk(\n",
     "        t_m=P.T_M_PC, e_leak=P.E_L_PC, v_th=P.V_TH_PC, v_reset=P.V_RESET_PC, t_r=P.T_R,\n",
-    "        es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "        es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "    \n",
     "    # run simulation\n",
     "    resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
@@ -1048,7 +1048,7 @@
     "# make and run ntwk\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M_PC, e_leak=P.E_L_PC, v_th=P.V_TH_PC, v_reset=P.V_RESET_PC, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=WS_RCR, ws_up=ws_up)\n",
     "resp = ntwk.run(spks_up=spks_up, vs_init=vs_init, gs_init=gs_init, dt=P.DT)\n",
     "\n",
     "# make plot\n",
