--- a/test_plasticity.ipynb
+++ b/test_plasticity.ipynb
@@ -88,12 +88,12 @@
     "}\n",
     "\n",
     "# make ntwk\n",
-    "ES_REV = {'AMPA': P.E_A, 'NMDA': P.E_N}\n",
+    "ES_SYN = {'AMPA': P.E_A, 'NMDA': P.E_N}\n",
     "TS_SYN = {'AMPA': P.T_A, 'NMDA': P.T_A}\n",
     "\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=P.T_M_PC, e_leak=P.E_L_PC, v_th=P.V_TH_PC, v_reset=P.V_RESET_PC, t_r=P.T_R,\n",
-    "    es_rev=ES_REV, ts_syn=TS_SYN, ws_rcr=ws_rcr, ws_up=ws_up,\n",
+    "    es_syn=ES_SYN, ts_syn=TS_SYN, ws_rcr=ws_rcr, ws_up=ws_up,\n",
     "    plasticity=plasticity)\n",
     "\n",
     "# run simulation with low and high upstream spiking rates\n",
