--- a/4_replay.ipynb
+++ b/4_replay.ipynb
@@ -94,7 +94,7 @@
     "    'v_th': P.V_TH_PC,  # (V)\n",
     "    'v_reset': P.V_RESET_PC,  # (V)\n",
     "    't_r': P.T_R,  # (s)\n",
-    "    'es_rev': {'AMPA': P.E_A, 'NMDA': P.E_N},  # (V)\n",
+    "    'es_syn': {'AMPA': P.E_A, 'NMDA': P.E_N},  # (V)\n",
     "    'ts_syn': {'AMPA': P.T_A, 'NMDA': P.T_N},  # (s)\n",
     "    'ws_rcr': {'AMPA': np.zeros((N_PC, N_PC)), 'NMDA': np.zeros((N_PC, N_PC))},  # (unitless)\n",
     "    'ws_up': WS_UP,\n",
@@ -821,12 +821,12 @@
     "v_th = cc([P.V_TH_PC*np.ones(N_PC), P.V_TH_INH*np.ones(N_INH)])\n",
     "v_reset = cc([P.V_RESET_PC*np.ones(N_PC), P.V_RESET_PC*np.ones(N_INH)])\n",
     "\n",
-    "es_rev = {'AMPA': P.E_A, 'NMDA': P.E_N, 'GABA': P.E_G}\n",
+    "es_syn = {'AMPA': P.E_A, 'NMDA': P.E_N, 'GABA': P.E_G}\n",
     "ts_syn = {'AMPA': P.T_A, 'NMDA': P.T_N, 'GABA': P.T_G}\n",
     "\n",
     "ntwk = LIFNtwk(\n",
     "    t_m=t_m, e_leak=e_l, v_th=v_th, v_reset=v_reset, t_r=P.T_R,\n",
-    "    es_rev=es_rev, ts_syn=ts_syn, ws_rcr=ws_rcr, ws_up=ws_up)"
+    "    es_syn=es_syn, ts_syn=ts_syn, ws_rcr=ws_rcr, ws_up=ws_up)"
    ]
   },
   {
