Add AHP equation.

--- a/dynamics.ipynb
+++ b/dynamics.ipynb
@@ -10,9 +10,9 @@
     "\n",
     "The $i$-th neuron's membrane voltage $V_i(t)$ is given by:\n",
     "\n",
-    "$\\tau_m\\cfrac{dV_i}{dt} = -(V_i - E_L) - g^i_A(t)(V_i - E_A) - g^i_{N}(t)(V_i - E_N) - g^i_G(t)(V_i - E_G) + I_{ext}(t)$\n",
+    "$\\tau_m\\cfrac{dV_i}{dt} = -(V_i - E_L) - g^i_A(t)(V_i - E_A) - g^i_{N}(t)(V_i - E_N) - g^i_G(t)(V_i - E_G) + g^i_{AHP}(t)(V_i - E_{AHP})$\n",
     "\n",
-    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_A$ and $E_A$ the AMPA conductance and reversal potential, respectively, etc., with conductances defined relative to the leak conductance. $I_{ext}$ is any external current injected directly into the neuron."
+    "where $\\tau_m$ is the membrane time constant, $E_L$ is the leak conductance, $g^i_A$ and $E_A$ the AMPA conductance and reversal potential, respectively, $g^i_N$ and $E_N$ the NMDA conductance and reversal potential, $g^i_G$ and $E_G$ the GABA conductance and reversal potential, and $g^i_{AHP}$ and $E_{AHP}$ the afterhyperpolarization (K+) conductance and reversal potential, with conductances defined relative to the leak conductance."
    ]
   },
   {
@@ -23,11 +23,24 @@
     "\n",
     "The synaptic conductances for the $i$-th cell are given by:\n",
     "\n",
-    "$g^i_{SYN} = \\sum\\limits_j w_{ij} \\sum\\limits_{k(j)} h_{SYN}(t - t^{k(j)})$\n",
+    "$g^i_{SYN}(t) = \\sum\\limits_j w_{ij} \\sum\\limits_{k(j)} h_{SYN}(t - t^{k(j)})$\n",
     "\n",
-    "where $g^i_{SYN} \\in \\{g^i_A, g^i_N, g^i_G\\}$, $j$ indexes upstream neurons, $w_{ij}$ is the synaptic strength from neuron $j$ onto neuron $i$, $k(j)$ is the $k$-th spike time of upstream neuron $j$, and $h_{SYN}(t)$ is the synaptic activation function for synapse type $SYN$ (in this case a one-sided exponential). These conductances are relative to the leak conductance and have no units.\n",
+    "where $g^i_{SYN} \\in \\{g^i_A, g^i_N, g^i_G\\}$, $j$ indexes upstream neurons, $w_{ij}$ is the synaptic strength from neuron $j$ onto neuron $i$, $k(j)$ is the $k$-th spike time of upstream neuron $j$, and $h_{SYN}(t)$ is the synaptic activation function for synapse type $SYN$ (in this case a one-sided exponential with time constant $\\tau_{SYN}$). These conductances are relative to the leak conductance and have no units.\n",
     "\n",
     "In short, the synaptic conductance of neuron $i$ caused by neuron $j$'s spike train is a convolution of neuron $j$'s spike train (where each spike is a delta function) with synaptic activation function $h(t)$ (e.g., a 1-sided decaying exponential), scaled by the synaptic weight $w_{ij}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Afterhyperpolarization\n",
+    "\n",
+    "The afterhyperpolarization condutance is given by:\n",
+    "\n",
+    "$g^i_{AHP}(t) = w_{AHP}\\sum\\limits_{k(i)}h_{AHP}(t - t^{k(i)})$\n",
+    "\n",
+    "where $k(i)$ indexes the $i$th neuron's $k$th spike and $h_{AHP}$ is also a one-sided exponential with time constant $\\tau_{AHP}$."
    ]
   },
   {
