Add description of AHP params.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -98,7 +98,10 @@
     "|$v_{rest}^{INH}$|`V_REST_INH`|CA3 inh. cell resting potential|-58|mV|see NeuroElectro site|\n",
     "|$v_{th}^{INH}$|`V_TH_INH`|CA3 inh. cell spk threshold|-36|mV|directly measured in Guzman et al., (2016)|\n",
     "|$v_{reset}^{INH}$|`V_RESET_INH`|CA3 inh. cell reset potential|-58|mV|same as resting|\n",
-    "|$\\tau_r$|`T_R`|refractory period for all cell types|2|ms|typical absolute refractory period value|"
+    "|$\\tau_r$|`T_R`|refractory period for all cell types|2|ms|typical absolute refractory period value|\n",
+    "|$E_{AHP}$|`E_AHP`|CA3 PC afterhyperpolarization (potassium) reversal potential|-70|mV|typical K+ reversal potential|\n",
+    "|$\\tau_{AHP}$|`T_AHP`|CA3 PC afterhyperpolarization (potassium) time constant|?|ms||\n",
+    "|$w_{AHP}$|`W_AHP`|CA3 PC afterhyperpolarization (potassium) magnitude|?|-||"
    ]
   },
   {
