Determine and store min number of upstream PL spikes to elicit PC spike.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -101,7 +101,8 @@
     "|$\\tau_r$|`T_R`|refractory period for all cell types|2|ms|typical absolute refractory period value|\n",
     "|$E_{AHP}$|`E_AHP`|CA3 PC afterhyperpolarization (potassium) reversal potential|-70|mV|typical K+ reversal potential|\n",
     "|$\\tau_{AHP}$|`T_AHP`|CA3 PC afterhyperpolarization (potassium) time constant|?|ms||\n",
-    "|$w_{AHP}$|`W_AHP`|CA3 PC afterhyperpolarization (potassium) magnitude|?|-||"
+    "|$w_{AHP}$|`W_AHP`|CA3 PC afterhyperpolarization (potassium) magnitude|?|-||\n",
+    "|$U_{A}^{PC}$|`U_A_PC`|min # AMPA inputs to elicit PC spike|19|spks|determined in [parameters_aux.ipynb](parameters_aux.ipynb)|"
    ]
   },
   {
@@ -220,6 +221,10 @@
       "V_RESET_INH = -0.058  # (V)\n",
       "\n",
       "T_R = 0.002  # (s)\n",
+      "\n",
+      "E_AHP = -0.07  # (V)\n",
+      "\n",
+      "U_A_PC = 19  # (spks)\n",
       "\n",
       "# SYNAPTIC CONDUCTANCE DYNAMICS\n",
       "\n",
